--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "A chatting web app",
   "main": "index.js",
   "scripts": {
+      "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "engines": {
+    "node": "9.3.0"  
+  },
+  "author": "Marc Lou",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3"
