--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "A chatting web app",
   "main": "index.js",
   "scripts": {
-      "start": "node server/server.js",
+    "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node": "9.3.0"  
+    "node": "9.3.0"
   },
   "author": "Marc Lou",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "socket.io": "^2.0.4"
   }
 }
